# onyx-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/scripts/: replace_unreleased.py
.github/workflows/: changelog.yml  ci.yml  publish.yml  release.yml
docs/: 00-index.md  00-overview.md  01-conventions.md  01-installation.md  02-architecture.md  02-quickstart.md  03-architecture.md  04-conventions.md  05-release-flow.md  20-clipboard.md  21-files.md  22-keyring.md  23-notify.md  24-osinfo.md  25-paths.md  26-shell.md  27-machineid.md  28-appearance.md  29-process.md
docs/modules/: clipboard.md  keyring.md  notify.md
src/: lib.rs
src/appearance/: mod.rs
src/clipboard/: mod.rs
src/files/: mod.rs
src/keyring/: mod.rs
src/machineid/: mod.rs
src/notify/: mod.rs
src/osinfo/: mod.rs
src/paths/: mod.rs
src/process/: mod.rs
src/shell/: mod.rs
